# asr_object_database

./: CMakeLists.txt  License.txt  README.md  mainpage.dox  package.xml
include/object_database/: NormalGenerator.h  ObjectDatabase.h  ObjectDatabaseConfig.h  ObjectDatabaseEntry.h  ObjectDatabaseRecognizer.h  ObjectManager.h  typedef.h
licenses/: third_party_licenses.txt
rsc/: config.xml
rsc/databases/: README  iv_to_wrl.py
rsc/databases/descriptor_objects/: copy.sh
rsc/databases/descriptor_objects/Amicelli/: Amicelli.nv.txt  Amicelli.xml  Amicelli_view_1.dsm  Amicelli_view_2.dsm  Amicelli_view_3.dsm  Amicelli_view_4.dsm  Amicelli_view_5.dsm  Amicelli_view_6.dsm  log.txt
rsc/databases/descriptor_objects/Margarine/: Margarine.nv.txt  Margarine.xml  log.txt
rsc/databases/descriptor_objects/NutellaGo/: NutellaGo.xml  log.txt
rsc/databases/descriptor_objects/OrangeMarmelade/: OrangeMarmelade.xml  OrangeMarmelade_view_1.dsm  OrangeMarmelade_view_2.dsm  OrangeMarmelade_view_3.dsm  OrangeMarmelade_view_4.dsm  OrangeMarmelade_view_5.dsm  log.txt
rsc/databases/descriptor_objects/PowderedSugar/: PowderedSugar.nv.txt  PowderedSugar.xml  log.txt
rsc/databases/descriptor_objects/PowderedSugarMill/: PowderedSugarMill.nv.txt  PowderedSugarMill.xml  PowderedSugarMill_view_1.dsm  PowderedSugarMill_view_2.dsm  PowderedSugarMill_view_3.dsm  PowderedSugarMill_view_4.dsm  PowderedSugarMill_view_5.dsm  PowderedSugarMill_view_6.dsm  log.txt
rsc/databases/descriptor_objects/Smacks/: Smacks.dae  Smacks.xml  log.txt
rsc/databases/descriptor_objects/Sprudelflasche/: Sprudelflasche.nv.txt  Sprudelflasche.xml  Sprudelflasche_surfaceMdl.sfm  log.txt
rsc/databases/descriptor_objects/Sweetener/: Sweetener.xml  Sweetener_surfaceMdl.sfm  Sweetener_view_1.dsm  Sweetener_view_2.dsm  log.txt
rsc/databases/descriptor_objects/VitalisSchoko/: VitalisSchoko.xml  VitalisSchoko_view_2.dsm  VitalisSchoko_view_4.dsm  log.txt
rsc/databases/descriptor_objects/YellowSaltCylinder/: YellowSaltCylinder.xml  YellowSaltCylinder_25k_tex.dae  YellowSaltCylinder_surfaceMdl.sfm  YellowSaltCylinder_view_2.dsm  YellowSaltCylinder_view_3.dsm  YellowSaltCylinder_view_4.dsm  YellowSaltCylinder_view_5.dsm  YellowSaltCylinder_view_6.dsm  log.txt
rsc/databases/environment/Coffeemachine/: coffeemachine.mtl
rsc/databases/environment/Dome/: Dome.dae
rsc/databases/environment/LabTable/: LabTable.mtl
rsc/databases/environment/LabTableSquare/: LabTableSquare.mtl
rsc/databases/environment/Locker/: Locker.mtl
rsc/databases/environment/OfficeChair/: OfficeChair.mtl
rsc/databases/environment/Rack/: Rack.mtl
rsc/databases/environment/TableDome/: TableDome.dae
rsc/databases/marker/: copy.sh
rsc/databases/marker/marker_0/: deviations.dev.txt
rsc/databases/marker/marker_1/: marker_1.dae
rsc/databases/marker/marker_10/: deviations.dev.txt  marker_10.dae
rsc/databases/marker/marker_13/: marker_13.dae
rsc/databases/marker/marker_14/: marker_14.dae
rsc/databases/marker/marker_15/: marker_15.dae  marker_15.nv.txt
rsc/databases/marker/marker_2/: marker_2.dae
rsc/databases/marker/marker_3/: marker_3.dae
rsc/databases/marker/marker_4/: marker_4.dae
rsc/databases/marker/marker_5/: marker_5.dae
rsc/databases/marker/marker_6/: marker_6.dae
rsc/databases/marker/marker_9/: crockerybasket.dae
rsc/databases/segmentable_objects/: copy.sh
rsc/databases/segmentable_objects/BowlAngled/: config.txt  object.dae  object.iv  object.mat  object.wrl  training_data  transformation_matrix
rsc/databases/segmentable_objects/BowlSmall/: BowlSmall.nv.txt  config.txt  object.dae  object.iv  object.mat  object.wrl  training_data  transformation_matrix
rsc/databases/sfb_object_models/: barenmarke.iv  barenmarke.iv.wrl  becher.iv  becher.iv.wrl  becher_eckig.iv.wrl  ei.iv  ei.iv.wrl  eier_halter.iv.wrl  gabel.iv  gabel.iv.wrl  geschirr.iv  hoepfner.iv  hoepfner.iv.wrl  ketchup.iv  ketchup.iv.wrl  ketchup_deckel.iv  ketchup_deckel.iv.wrl  ketchup_flasche.iv  ketchup_flasche.iv.wrl  ketchup_kappe.iv.wrl  loeffel_gross.iv  loeffel_gross.iv.wrl  loeffel_klein.iv  loeffel_klein.iv.wrl  mess_becher.iv  mess_becher.iv.wrl  messer.iv  messer.iv.wrl  schale_eckig.iv  schale_eckig.iv.wrl  schale_klein.iv  schale_klein.iv.wrl  tasse.iv  tasse.iv.wrl  tasse_eckiger_henkel.iv  tasse_eckiger_henkel.iv.wrl  tasse_runder_henkel.iv  tasse_runder_henkel.iv.wrl  teller.iv  teller.iv.wrl  (+4 more)
rsc/databases/textured_objects/: copy.sh
src/: ObjectDatabase.cpp  ObjectDatabaseConfig.cpp  ObjectDatabaseEntry.cpp  ObjectDatabaseRecognizer.cpp  object_database.cpp
src/normal_generator_tool/: normalsTool.py  normalsToolParams.yaml
srv/: ObjectMetaData.srv  ObjectTypeGenerator.srv  ObjectTypeList.srv  RecognizerList.srv  RecognizerListMeshes.srv
xsd/: ConfigurationXMLSchema.xsd
xsd_gen/asr_object_database/: ConfigurationXMLSchema.cpp  ConfigurationXMLSchema.h
(+162 files in other folders)
