<package>
  <name>asr_object_database</name>
  <version>1.0.0</version>
  <description>This package is used to store and provide objects and their information which can be used by other packages like object recognizers</description>
  <author>Allgeyer Tobias, Aumann Florian, Borella Jocelyn, Braun Kai, Heizmann Heinrich, Heller Florian, Kasper Alexander, Marek Felix, Mehlhaus Jonas, Meißner Pascal, Schleicher Ralf, Stöckle Patrick, Walter Milena</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>GPL</license>
  <url type="website">http://ros.org/wiki/asr_object_database</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>asr_ros_uri</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>xsdcxx</build_depend>
  <build_depend>asr_xsd2cpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>cmake_modules</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>asr_ros_uri</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>resource_retriever</run_depend>
  <run_depend>xsdcxx</run_depend>
  <run_depend>asr_xsd2cpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>


